21-gitlab/templates/service-ssh-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  namespace: gitlab
  annotations:
    # Dedicated MetalLB IP for git-over-SSH (Traefik only handles HTTP/S).
    # .10 = Traefik, .11 = Jellyfin, .12 = GitLab SSH.
    metallb.universe.tf/loadBalancerIPs: 192.168.1.12
spec:
  type: LoadBalancer
  selector:
    app: gitlab
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
