21-gitlab/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
